adjusted config in index.html and .webmanifest; adjusted/simplified formatting of About page for mobile; Projects page tentatively done; adjusted styling throughout

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Welcome to Ryan Tixier's Portfolio. Ryan is a full-stack JavaScript developer with a passion for creating web applications."
+    />
+    <link rel="manifest" href="./site.webmanifest" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -21,7 +26,6 @@
       sizes="16x16"
       href="./favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
     <title>Ryan Tixier's Portfolio</title>
   </head>
   <body>
